# remind_me

./: .env-template  .gitignore  Procfile  pyproject.toml  requirements.txt  schedule_jobs.py  sms.py
remind_me/: .env.example  check_email.py  clock.py  events.py  main.py  schedule_jobs.py  sms.py
remind_me/data/: _all_models.py  db_session.py  events.py  user.py
remind_me/infrastructure/: cookie_auth.py
remind_me/services/: ping.py  user_service.py
remind_me/templates/: base.html
remind_me/templates/register/: home.pt  login.pt  logout.pt  register.pt
remind_me/templates/shared/: base.pt
remind_me/viewmodels/register/: home_viewmodel.py  login_viewmodel.py  register_viewmodel.py
remind_me/viewmodels/shared/: viewmodel.py
remind_me/views/: register.py
static/: style.css
tests/: test_remind_me.py
